--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <!--header-->
             <nav class="flex flex-row justify-between lg:justify-evenly font-extrabold p-3 px-5">
                 <a href="#" class="block py-5 md:hidden">
-                    <img src="../dist/images/Polygon 3.svg" alt="back-to" class="h-4">
+                    <img src="./images/Polygon 3.svg" alt="back-to" class="h-4">
                 </a>
                 <div>
-                    <img src="../dist/images/Logo 3.svg" alt="logo" >
+                    <img src="./images/Logo 3.svg" alt="logo" >
                 </div>
                 <button>
-                    <img src="../dist/images/MenuBtn.svg" alt="menu" class="h-4 lg:hidden">
+                    <img src="./images/MenuBtn.svg" alt="menu" class="h-4 lg:hidden">
                 </button>
                 <div class="w-1/3 text-center items-center justify-around text-white hidden lg:flex"
                 >
@@ -35,10 +35,10 @@
             <main class="text-white font-extralight  lg:mt-40">
                 <div class=" w-full lg:flex flex-row items-center hidden lg:w-4/5 xl:w-2/3 mx-auto mb-5">
                     <a href="#" class="block shadow-md bg-white p-3 w-1/5 text-center rounded text-black">Volver a la tienda</a>
-                    <a href="#" class="block mx-5 flex">Conoce más sobre las Runas de Fusión <img src="../dist/images/Arrow 1.svg" alt="arrow" class="w-4 ml-2"></a>
+                    <a href="#" class="block mx-5 flex">Conoce más sobre las Runas de Fusión <img src="./images/Arrow 1.svg" alt="arrow" class="w-4 ml-2"></a>
                 </div>
                 <div class="lg:hidden flex justify-center">
-                    <img src="../dist/images/Rectangle 3.svg" alt="rectangle10">
+                    <img src="./images/Rectangle 3.svg" alt="rectangle10">
                 </div>
                 <!--sale info-->
                 <div class="bg-black bg-opacity-10 lg:bg-opacity-100 p-1 lg:p-9 lg:w-4/5 xl:w-2/3 px-5 mx-auto text-xs sm:text-sm">
@@ -69,7 +69,7 @@
                                 <ul class="lg:w-1/2">
                                     <li class="flex flex-col py-2 px-5 md:px-2 justify-between text-center">
                                        <h2 class="text-xl lg:text-2xl font">HUMANOS</h2>
-                                        <img src="../dist/images/Group_78.svg" alt="gema-humanos" class="w-1/3 h-1/3 mx-auto py-5">
+                                        <img src="./images/Group_78.svg" alt="gema-humanos" class="w-1/3 h-1/3 mx-auto py-5">
                                         <span class="px-3 text-xl lg:text-2xl">50%</span>
                                     </li>
                                     
@@ -77,7 +77,7 @@
                                 <ul class="lg:w-1/2">
                                     <li class="flex flex-col py-2 px-5 md:px-2 justify-between text-center">
                                         <h2 class=" text-xl lg:text-2xl font">DEMONIOS</h2>
-                                         <img src="../dist/images/Group_77.svg" alt="gema-humanos" class="w-1/3 h-1/3 mx-auto py-5">
+                                         <img src="./images/Group_77.svg" alt="gema-humanos" class="w-1/3 h-1/3 mx-auto py-5">
                                          <span class="px-3 text-xl lg:text-2xl">50%</span>
                                      </li>
                                     </li>
